--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "python-vlc"]
-	path = python-vlc
-	url = https://github.com/oaubert/python-vlc.git
+[submodule "etc/python-vlc"]
+	path = etc/python-vlc
+	url = https://github.com/oaubert/python-vlc
