--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,30 +3,9 @@ environment:
     - PYTHON: "C:\\Python27"
       PYTHON_VERSION: "2.7"
       PYTHON_ARCH: "32"
+      VLC_INSTALL_FLAGS: "--x86"
 
 install:
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
-#  - "pip install pyinstaller wxpython"
-  - ps: choco install poshgit
-  - ps: |
-        $packageArgs = @{
-          packageName   = 'wxPython3'
-          softwareName  = 'wxPython3*'
-
-          unzipLocation = "$(Split-Path -parent $MyInvocation.MyCommand.Definition)"
-          fileType      = 'exe'
-          silentArgs   = '/VERYSILENT /SUPPRESSMSGBOXES /NORESTART /SP-'
-
-          url           = 'https://downloads.sourceforge.net/project/wxpython/wxPython/3.0.2.0/wxPython3.0-win32-3.0.2.0-py27.exe'
-          checksum      = '864d44e418a0859cabff71614a495bea57738c5d'
-          checksumType  = 'sha1'
-
-          # url64bit      = 'https://downloads.sourceforge.net/project/wxpython/wxPython/3.0.2.0/wxPython3.0-win64-3.0.2.0-py27.exe'
-          # checksum64    = '32c27449b7b82840b71b9dea07c9b97cb67f4ad6'
-          # checksumType64= 'sha1'
-
-          validExitCodes= @(0, 3010, 1641)
-        }
-
-        Install-ChocolateyPackage @packageArgs
-  - 'python -c "import wx; print wx.version()"'
+  - "pip install pyinstaller wxpython"
+  - ps: choco install vlc $env:VLC_INSTALL_FLAGS
