--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,10 +13,10 @@ install:
 
 build_script:
   - ps: cd $env:APPVEYOR_BUILD_FOLDER
-  - ps: Build.bat
+  - ps: .\Build.bat
 
 after_build:
-  - ps: 7z a bin\FestEngine.zip $env:APPVEYOR_BUILD_FOLDER\bin\FestEngine
+  - ps: 7z a bin\FestEngine.zip $env:APPVEYOR_BUILD_FOLDER\bin\FestEngine\*
 
 artifacts:
   - path: bin\FestEngine.zip
