--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,8 +12,8 @@ install:
   - ps: choco install vlc $env:VLC_INSTALL_FLAGS -y --no-progress
 
 build_script:
-  - bat: cd %APPVEYOR_BUILD_FOLDER%\bin
-  - bat: .\Build.bat
+  - cmd: cd %APPVEYOR_BUILD_FOLDER%\bin
+  - cmd: .\Build.bat
 
 after_build:
   - ps: 7z a bin\FestEngine.zip $env:APPVEYOR_BUILD_FOLDER\bin\FestEngine\*
