--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,7 +14,7 @@ install:
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
   - ps: pip install pyinstaller
   - ps: pip install wxpython
-  - ps: pip install https://github.com/oaubert/python-vlc/archive/master.zip
+  - ps: pip install python-vlc
   - ps: choco install vlc $env:VLC_INSTALL_FLAGS -y --no-progress
 
 build_script:
