--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,10 +5,12 @@ environment:
       PYTHON_VERSION: "3.6"
       PYTHON_ARCH: "32"
       VLC_INSTALL_FLAGS: "--x86"
+      BUILD_FLAGS: ""
     - PYTHON: "C:\\Python36"
       PYTHON_VERSION: "3.6"
       PYTHON_ARCH: "64"
       VLC_INSTALL_FLAGS: ""
+      BUILD_FLAGS: "%PROGRAMFILES%\VideoLAN\VLC"
       
 install:
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
@@ -19,7 +21,7 @@ install:
 
 build_script:
   - cmd: cd %APPVEYOR_BUILD_FOLDER%\bin
-  - cmd: .\Build.bat
+  - cmd: .\Build.bat %BUILD_FLAGS%
 
 after_build:
   - ps: 7z a bin\FestEngine.zip $env:APPVEYOR_BUILD_FOLDER\bin\FestEngine\*
