--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,7 +21,7 @@ install:
 
 build_script:
   - cmd: cd %APPVEYOR_BUILD_FOLDER%\bin
-  - cmd: .\Build.bat %BUILD_FLAGS%
+  - cmd: .\Build.bat "%BUILD_FLAGS%"
 
 after_build:
   - ps: 7z a bin\FestEngine.zip $env:APPVEYOR_BUILD_FOLDER\bin\FestEngine\*
