--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,10 +4,12 @@ environment:
 #        secure: KyDeEKZX+ICLjbuRvb6p34x45RZwzkyeEps+snuVUek=
 
     matrix:
-      - PYTHON_PATH: C:\Python36
+      - ARCH: 'x86'
+        PYTHON_PATH: C:\Python36
         VLC_INSTALL_FLAGS: '--x86'
 
-      - PYTHON_PATH: C:\Python36-x64
+      - ARCH: 'x64'
+        PYTHON_PATH: C:\Python36-x64
         VLC_INSTALL_FLAGS: ''
 
 #init:
@@ -23,9 +25,19 @@ build_script:
     - cmd: python build.py
 
 after_build:
-    - cmd: cd "%APPVEYOR_BUILD_FOLDER%\bin"
-    - cmd: 7z a FestEngine.zip FestEngine\*
+    - cmd: cd "%APPVEYOR_BUILD_FOLDER%\bin\FestEngine"
+    - cmd: echo --- Packing a Full version ---
+    - cmd: 7z a ..\full.zip *
+    - cmd: echo --- Cleaning ---
+    - cmd: del MSVCP140.dll VCRUNTIME140.dll
+    - cmd: del api-ms-*
+    - cmd: del libvlc*
+    - cmd: rd /S /Q plugins
+    - cmd: echo --- Packing a Minimal version ---
+    - cmd: 7z a ..\minimal.zip *
 
 artifacts:
-    - path: bin\FestEngine.zip
-      name: FestEngine
+    - path: bin\full.zip
+      name: FestEngine $(arch) Full
+    - path: bin\minimal.zip
+      name: FestEngine $(arch) Minimal
