--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,7 +17,7 @@ environment:
 
 install:
     - "SET PATH=%PYTHON_PATH%;%PYTHON_PATH%\\Scripts;%PATH%"
-    - cmd: pip install pyinstaller wxpython python-vlc
+    - cmd: pip install pyinstaller python-vlc wxpython
     - cmd: choco install vlc %VLC_INSTALL_FLAGS% -y --no-progress
 
 build_script:
