--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
 
 script:
   - cd bin && python build.py /usr/lib/libvlc.so.5 /usr/lib/libvlccore.so.7 /usr/lib/vlc/plugins
-  - ./rm_extra_libs.sh
+  - mv install.sh FestEngine/
   - tar -zcvf festengine-linux-x64.tar.gz FestEngine
 
 deploy:
