--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,7 +17,6 @@ install:
 
 build_script:
     - |
-        python %PYTHON_PATH%\Tools\i18n\msgfmt.py -o "%APPVEYOR_BUILD_FOLDER%\src\locale\ru\LC_MESSAGES\main.mo" "%APPVEYOR_BUILD_FOLDER%\src\locale\ru\LC_MESSAGES\main.po"
         cd "%APPVEYOR_BUILD_FOLDER%\bin"
         python build.py
 
@@ -25,6 +24,8 @@ after_build:
     - |
         cd "%APPVEYOR_BUILD_FOLDER%\bin\FestEngine"
         del MSVCP140.dll VCRUNTIME140.dll api-ms-*  # GPL does not allow...
+        md ".\locale\ru\LC_MESSAGES"
+        python %PYTHON_PATH%\Tools\i18n\msgfmt.py -o ".\locale\ru\LC_MESSAGES\main.mo" "%APPVEYOR_BUILD_FOLDER%\src\locale\ru\LC_MESSAGES\main.po"
         echo --- Packing a Full version ---
         7z a ..\festengine-win%ARCH%-full.zip *
         echo --- Minimalizing ---
