--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ install:
 script:
   - cd bin && python build.py -novlc
   - mv install.sh FestEngine/
-  - mkdir -p ./locale/ru/LC_MESSAGES && msgfmt -o !$/main.mo ../src/locale/ru/LC_MESSAGES/main.po
+  - mkdir -p ./locale/ru/LC_MESSAGES && msgfmt -o ./locale/ru/LC_MESSAGES/main.mo ../src/locale/ru/LC_MESSAGES/main.po
   - tar -zcvf festengine-linux-x64-minimal.tar.gz FestEngine
 
 deploy:
