--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ install:
 
 script:
   - cd bin && python build.py -novlc
-  - mv install.sh FestEngine/
-  - mkdir -p ./locale/ru/LC_MESSAGES && msgfmt -o ./locale/ru/LC_MESSAGES/main.mo ../src/locale/ru/LC_MESSAGES/main.po
+  - mv install.sh ./FestEngine/
+  - mkdir -p ./FestEngine/locale/ru/LC_MESSAGES && msgfmt -o ./FestEngine/locale/ru/LC_MESSAGES/main.mo ../src/locale/ru/LC_MESSAGES/main.po
   - tar -zcvf festengine-linux-x64-minimal.tar.gz FestEngine
 
 deploy:
