--- a/appveyor.yml
+++ b/appveyor.yml
@@ -44,17 +44,17 @@ after_build:
         7z a ..\festengine-win%ARCH%-minimal.zip *
 
 artifacts:
-    - path: bin\festengine-win$(arch)-full.zip
-      name: FestEngine Windows $(arch)bit Full
-    - path: bin\festengine-win$(arch)-minimal.zip
-      name: FestEngine Windows $(arch)bit Minimal
+    - path: bin\festengine-win$(arch)$(build_flags)-full.zip
+      name: FestEngine Windows $(arch)bit$(build_flags) Full
+    - path: bin\festengine-win$(arch)$(build_flags)-minimal.zip
+      name: FestEngine Windows $(arch)bit$(build_flags) Minimal
 
 deploy:
     description: 'Auto-created Release'
     provider: GitHub
     auth_token:
         secure: tpurZq/nyMadA/DqWepPmvcxhxfUL25cfvmFEDOUPUvOfNdUP4SpBH1QJm1yt06T
-    artifact: bin\festengine-win$(arch)-minimal.zip,bin\festengine-win$(arch)-full.zip
+    artifact: bin\festengine-win$(arch)$(build_flags)-minimal.zip,bin\festengine-win$(arch)$(build_flags)-full.zip
     draft: true
     prerelease: true
     on:
