--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,19 +4,9 @@ environment:
       - ARCH: '64'
         PYTHON_PATH: C:\Python36-x64
         VLC_INSTALL_FLAGS: ''
-        BUILD_FLAGS: ''
       - ARCH: '32'
         PYTHON_PATH: C:\Python36
         VLC_INSTALL_FLAGS: '--x86'
-        BUILD_FLAGS: ''
-      - ARCH: '64'
-        PYTHON_PATH: C:\Python36-x64
-        VLC_INSTALL_FLAGS: ''
-        BUILD_FLAGS: '-d'
-      - ARCH: '32'
-        PYTHON_PATH: C:\Python36
-        VLC_INSTALL_FLAGS: '--x86'
-        BUILD_FLAGS: '-d'
 
 install:
     - |
@@ -27,10 +17,17 @@ install:
 build_script:
     - |
         cd "%APPVEYOR_BUILD_FOLDER%\bin"
-        python build.py %BUILD_FLAGS%
+        python build.py
+        python build.py -d
 
 after_build:
     - |
+        cd "%APPVEYOR_BUILD_FOLDER%\bin\FestEngine-debug"
+        del MSVCP140.dll VCRUNTIME140.dll api-ms-*
+        md ".\locale\ru\LC_MESSAGES"
+        python %PYTHON_PATH%\Tools\i18n\msgfmt.py -o ".\locale\ru\LC_MESSAGES\main.mo" "%APPVEYOR_BUILD_FOLDER%\src\locale\ru\LC_MESSAGES\main.po"
+        echo --- Packing a Debug version ---
+        7z a ..\festengine-win%ARCH%-debug.zip *
         cd "%APPVEYOR_BUILD_FOLDER%\bin\FestEngine"
         del MSVCP140.dll VCRUNTIME140.dll api-ms-*  # GPL does not allow...
         md ".\locale\ru\LC_MESSAGES"
@@ -44,17 +41,19 @@ after_build:
         7z a ..\festengine-win%ARCH%-minimal.zip *
 
 artifacts:
-    - path: bin\festengine-win$(arch)$(build_flags)-full.zip
-      name: FestEngine Windows $(arch)bit$(build_flags) Full
-    - path: bin\festengine-win$(arch)$(build_flags)-minimal.zip
-      name: FestEngine Windows $(arch)bit$(build_flags) Minimal
+    - path: bin\festengine-win$(arch)-debug.zip
+      name: FestEngine Windows $(arch)bit Debug
+    - path: bin\festengine-win$(arch)-full.zip
+      name: FestEngine Windows $(arch)bit Full
+    - path: bin\festengine-win$(arch)-minimal.zip
+      name: FestEngine Windows $(arch)bit Minimal
 
 deploy:
     description: 'Auto-created Release'
     provider: GitHub
     auth_token:
         secure: tpurZq/nyMadA/DqWepPmvcxhxfUL25cfvmFEDOUPUvOfNdUP4SpBH1QJm1yt06T
-    artifact: bin\festengine-win$(arch)$(build_flags)-minimal.zip,bin\festengine-win$(arch)$(build_flags)-full.zip
+    artifact: bin\festengine-win$(arch)-minimal.zip,bin\festengine-win$(arch)-full.zip
     draft: true
     prerelease: true
     on:
