max vlc version supported now is 2.2.8

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,7 +12,7 @@ install:
     - |
         SET PATH=%PYTHON_PATH%;%PYTHON_PATH%\\Scripts;%PATH%
         pip install pyinstaller python-vlc wxpython
-        choco install -y --no-progress %VLC_INSTALL_FLAGS% vlc
+        choco install -y --no-progress %VLC_INSTALL_FLAGS% vlc --version 2.2.8
 
 build_script:
     - |
