--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,5 @@
 skip_non_tags: true
+shallow_clone: true
 image: Visual Studio 2017
 environment:
     matrix:
@@ -7,17 +8,19 @@ environment:
         PYTHON_PATH: C:\Python36-x64
         VLC_INSTALL_FLAGS: ''
       - ARCH: '64'
-        VLC_VERSION: 'v2.2.8'
+        VLC_VERSION: '2.2.8'
         PYTHON_PATH: C:\Python36-x64
         VLC_INSTALL_FLAGS: '--version 2.2.8'
       - ARCH: '32'
-        VLC_VERSION: 'v2.2.8'
+        VLC_VERSION: '2.2.8'
         PYTHON_PATH: C:\Python36
         VLC_INSTALL_FLAGS: '--x86 --version 2.2.8'
 
 install:
+    - ps: if ($env:VLC_VERSION -eq "latest") {$env:VLC_VERSION = ((choco list vlc | Select-String -Pattern "^vlc [\d\.]* \[Approved\]") -split " ")[1]}
     - cmd: |
-        SET PATH=%PYTHON_PATH%;%PYTHON_PATH%\\Scripts;%PATH%
+        set PATH=%PYTHON_PATH%;%PYTHON_PATH%\Scripts;%PATH%
+        python -m pip install --upgrade pip
         pip install pyinstaller python-vlc wxpython
         choco install -y --no-progress %VLC_INSTALL_FLAGS% vlc
 
@@ -28,37 +31,37 @@ build_script:
         python build.py -d
 
 after_build:
+    - if [%ARCH%]==[64] (
+        echo --- Building a Debug version --- &&
+        cd "%APPVEYOR_BUILD_FOLDER%\bin\FestEngine-debug" &&
+        del MSVCP140.dll VCRUNTIME140.dll api-ms-* &&
+        md ".\locale\ru\LC_MESSAGES" &&
+        python %PYTHON_PATH%\Tools\i18n\msgfmt.py -o ".\locale\ru\LC_MESSAGES\main.mo" "%APPVEYOR_BUILD_FOLDER%\src\locale\ru\LC_MESSAGES\main.po" &&
+        echo --- Packing a Debug version --- &&
+        7z a ..\festengine-win%ARCH%-VLCv%VLC_VERSION%-debug.zip *)
     - cmd: |
-        if "%ARCH%" == "64" (
-            cd "%APPVEYOR_BUILD_FOLDER%\bin\FestEngine-debug"
-            del MSVCP140.dll VCRUNTIME140.dll api-ms-*
-            md ".\locale\ru\LC_MESSAGES"
-            python %PYTHON_PATH%\Tools\i18n\msgfmt.py -o ".\locale\ru\LC_MESSAGES\main.mo" "%APPVEYOR_BUILD_FOLDER%\src\locale\ru\LC_MESSAGES\main.po"
-            echo --- Packing a Debug version ---
-            7z a ..\festengine-win%ARCH%-VLC_%VLC_VERSION%-debug.zip *
-        )
+        echo --- Building a Full version ---
         cd "%APPVEYOR_BUILD_FOLDER%\bin\FestEngine"
         del MSVCP140.dll VCRUNTIME140.dll api-ms-*  # GPL does not allow...
         md ".\locale\ru\LC_MESSAGES"
         python %PYTHON_PATH%\Tools\i18n\msgfmt.py -o ".\locale\ru\LC_MESSAGES\main.mo" "%APPVEYOR_BUILD_FOLDER%\src\locale\ru\LC_MESSAGES\main.po"
         echo --- Packing a Full version ---
-        7z a ..\festengine-win%ARCH%-VLC_%VLC_VERSION%-full.zip *
-        if "%VLC_VERSION%" == "latest" (
-            echo --- Minimalizing ---
-            cd ..
-            .\minimalize.bat
-            echo --- Packing a Minimal version ---
-            7z a ..\festengine-win%ARCH%-minimal.zip *
-        )
+        7z a ..\festengine-win%ARCH%-VLCv%VLC_VERSION%-full.zip *
+    - if [%VLC_VERSION%]==[latest] (
+        echo --- Minimalizing a Full version --- &&
+        cd "%APPVEYOR_BUILD_FOLDER%\bin\" &&
+        .\minimalize.bat &&
+        echo --- Packing a Minimal version --- &&
+        7z a .\festengine-win%ARCH%-minimal.zip .\FestEngine\*)
 
 test: off
 
 artifacts:
-    - name: FestEngine Windows $(arch)bit VLC %(vlc_version) Debug
-      path: bin\festengine-win$(arch)-VLC_%(vlc_version)-debug.zip
+    - name: FestEngine Windows $(arch)bit VLC $(vlc_version) Debug
+      path: bin\festengine-win$(arch)-VLCv$(vlc_version)-debug.zip
       type: zip
-    - name: FestEngine Windows $(arch)bit VLC %(vlc_version) Full
-      path: bin\festengine-win$(arch)-VLC_%(vlc_version)-full.zip
+    - name: FestEngine Windows $(arch)bit VLC $(vlc_version) Full
+      path: bin\festengine-win$(arch)-VLCv$(vlc_version)-full.zip
       type: zip
     - name: FestEngine Windows $(arch)bit Minimal
       path: bin\festengine-win$(arch)-minimal.zip
@@ -69,7 +72,7 @@ deploy:
     provider: GitHub
     auth_token:
         secure: tpurZq/nyMadA/DqWepPmvcxhxfUL25cfvmFEDOUPUvOfNdUP4SpBH1QJm1yt06T
-    artifact: bin\festengine-win$(arch)-minimal.zip,bin\festengine-win$(arch)-full.zip
+    artifact: bin\festengine-win$(arch)-minimal.zip,bin\festengine-win$(arch)-VLCv$(vlc_version)-full.zip
     draft: true
     prerelease: true
     on:
