--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,6 +19,10 @@ for:
       - image: Ubuntu
         ARCH: '64'
 
+  install:
+    - sudo apt-get update
+    - sudo apt-get install -y python3-pip
+    - sudo pip3 install -U docker-compose
   build_script:
     - ./bin/build.sh
 
